MDEV-30081 Select from complex view using where clause gets SIGNAL 11 crash with derived_merge=on

Select from complex view using where clause gets SIGNAL 11
        crash with derived_merge=on in versions 10.6 - 10.9. The
        issue does not happen in 10.5 or 10.10. If derived_merge=off
        then the issue does not happen. If derived_merge=on and there
        is no where clause used against the view, the issue does not
        happen.  Issue traced to invalid table_map produced (ultimately)
        by the optimizer table elimination code and fixed in MDEV-26278.